--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="sign">
 
-      <img src="images/manu.PNG" alt="MANCHESTER" class="img">
+      <img src="manu.PNG" alt="MANCHESTER" class="img">
       <p class="in">Sign In</p>
 
 </div>
@@ -20,7 +20,7 @@
 <div class="want">
 
   <ul class="list">
-        <img src="images/manu logo.PNG" alt="logo" height="40" class="logo">
+        <img src="manu logo.PNG" alt="logo" height="40" class="logo">
 
           <a href="#"> <li>Latest</li> </a>   
 
