--- a/complete.html
+++ b/complete.html
@@ -39,7 +39,7 @@
   
 </div>
 
-
+<div class="men">
 
 <div class="coach">
   <img src="coach2.jpeg" alt="" class="coach2">
@@ -57,7 +57,9 @@
 <img src="academy.PNG" alt="" width="300px" height="298px" class="under2">
 <p class="under3">Man United Vs Ipswich</p>
 </div>
-
+  
+</div>
+  
 <br><br><br>
 <div class="academy">
 <img src="win.PNG" alt="" class="ugarte">
