--- a/complete.html
+++ b/complete.html
@@ -39,42 +39,40 @@
   
 </div>
 
-<div class="men">
+<div class="all">
 
-<div class="coach">
-  <img src="coach2.jpeg" alt="" class="coach2">
-  <img src="fit.PNG" width="70px" height="40px" alt="" class="coach3"> 
-     <a href="https://www.bing.com/ck/a?!&&p=081aa90be5a0478c87973d4e5248578e03e98f965909dd5d224c82dc16b44d14JmltdHM9MTc0MDE4MjQwMA&ptn=3&ver=2&hsh=4&fclid=39ecaa31-2fae-6865-10b9-bf302e6c6967&u=a1L3ZpZGVvcy9yaXZlcnZpZXcvcmVsYXRlZHZpZGVvP3E9eW91dHViZSttYW4rdSthcm9yaW0rc3BlYWtzK2V2ZXJ0b25zK21hdGNoJm1pZD03MUZDN0NERkUyNEE4Rjk4MzhBRDcxRkM3Q0RGRTI0QThGOTgzOEFEJkZPUk09VklSRQ&ntb=1"><p class="review">&nbsp;Ruben's post match review </p> </a>
-     
+      <div >
+            <img src="coach2.jpeg" alt="roben's post-match press conference"   height="250" width="400"  class=" ruben" >
+            <h3 class="ruben1"><a href="https://youtu.be/ATBHZ4-O_Ro?si=NHWC9H2MTWg30sJ3">Roben's Post-match Press Conference</a> 
 
-<div class="bruno" >
-  <img src="captian.jpeg" width="400px" height="287px" alt="perfect free-kick" class="bruno2"> <a href="https://youtu.be/A0VTurtyhm0"><p class="free-kick">Bruno Frenandes amazing free-kick Goal </p></a> 
-  <img src="fit.PNG" width="70px" height="40px" alt="youtube" class="bruno3">
+            </h3>
+      </div>
+
+      <div>
+        <img src="captian.jpeg" alt="captain" height="250" width="400"  class="captain1">
+        <h3 class="captain2"><a href="https://youtu.be/OKNlqpm-80M?si=70csn0bakwWPsmbp">Bruno powerful Goal</a></h3>
+      </div>
+
+
+
+    <div>
+      <img src="bruno.webp" alt="" height="250" width="400" class="bruno1">
+      <h3 class="bruno2"><a href="">FA Cup Victory</a></h3>
+      
+    </div>
 
 </div>
+<br><br>
 
-<div class="under">
-<img src="academy.PNG" alt="" width="300px" height="298px" class="under2">
-<p class="under3">Man United Vs Ipswich</p>
-</div>
-  
-</div>
-  
-<br><br><br>
 <div class="academy">
 <img src="win.PNG" alt="" class="ugarte">
 
 </div>
-
+<br>
 <div class="end">
-  <img src="end point.PNG" alt="">
+  <img src="end point.PNG" alt="" class="end1">
 </div>
 
 
-
-
-<script>
-  alert('Group B \n we created man united web page')
-</script>
 </body>
 </html>
