--- a/feature.html
+++ b/feature.html
@@ -10,6 +10,7 @@
 <body>
   
   <div class="move">
+
 <ul class="move2">
   <li><a href="complete.html">Lastest</a></li>
   <li><a href="epl.html">Epl Table</a></li>
@@ -20,16 +21,21 @@
 </ul>
   </div>
 
+
+<div class="dicipline">
+
   <div class="move3">
     <h1>Wednsday 26th February</h1>
-     <img src="epl 1.PNG" alt="">
+     <img src="feat1.PNG" alt="" class="move4">
   </div>
- 
-
 
   <div class="work1">
     <h1>Thrusday 27th February</h1>
-    <img src="epl2.PNG" alt="">
+    <img src="feat2.PNG" alt="">
   </div>
+
+</div>
+
+
 </body>
 </html>
