--- a/history.html
+++ b/history.html
@@ -21,7 +21,7 @@
   </div>
 
 <div>
-  <img src="title..PNG" alt="">
+  <img src="title..PNG" alt="" class="title1">
   <p class="talk">
     FIRST DIVISION
     
@@ -34,7 +34,7 @@
 </div>
 
 <div class="work">
-  <img src="title2.PNG" alt="">
+  <img src="title2.PNG" alt="" class="title2">
 
 </div>
 <p class="talk">After Chelsea won the Double under Carlo Ancelotti in 2009/10, the Reds wrestled the title back to Old Trafford with a success based on the foundation of an incredible home record. After the West Londoners were beaten in front of a jubilant home crowd in a virtual title decider in May 2011, a point at Blackburn sealed the 12th league success of Sir Alex's remarkable reign with Wayne Rooney's penalty ensuring United could not be caught at the top.
@@ -42,7 +42,7 @@
   That title set a new record for the English top flight of 19 in total, but United were made to wait for the 20th after missing out in the 2011/12 season by the most agonising of margins - local rivals Manchester City snatched the prize in the dying seconds of their final league game.</p>
 
 <div>
-  <img src="title3.PNG" alt="">
+  <img src="title3.PNG" alt="" class="title3">
 </div>
 <p class="talk">Manchester United are currently the second most successful team in FA Cup history, behind only Arsenal.
 
@@ -51,7 +51,7 @@
   The most recent victory came back in 2016 under the guidance of Louis van Gaal. The Dutch coach left his role soon after, but goals from Juan Mata and Jesse Lingard late in the day saw Man Utd claim a 2-1 win over Crystal Palace</p>
 
 <div>
-  <img src="title4.PNG" alt="">
+  <img src="title4.PNG" alt="" class="title4">
 </div>
 
 <button><a class="back" href="#">back to the top</a></button>
